New update: Carousel component with mock data, add two buttons and empty information component

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Escuela de Manejo PZ</title>
-  <base href="/deploy-empz">
+  <base href="https://glenquor.github.io/deploy-empz">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/logo-empz-small.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,6 +11,6 @@
 <style>:root{--white-background:#FCFCFC;--gray-color:#808080;--text-off-color:#DBDCE1;--border-line:1px solid #000000;--box-shadow:0px 1px 4px rgba(0, 0, 0, .3)}html,body{margin:0;height:100vh}</style><link rel="stylesheet" href="styles.5e4d1f4412eb3196.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.5e4d1f4412eb3196.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.a8f0f59a342c3f6e.js" type="module"></script><script src="polyfills.d599488e097587c9.js" type="module"></script><script src="main.ce2bd7adaf74a388.js" type="module"></script>
+<script src="runtime.f5c1669f6b75b4e0.js" type="module"></script><script src="polyfills.d599488e097587c9.js" type="module"></script><script src="main.11daaf018c00af9c.js" type="module"></script>
 
 </body></html>
