Change base href

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Escuela de Manejo PZ</title>
-  <base href="https://glenquor.github.io/deploy-empz">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/logo-empz-small.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
